tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true then 1 + 2 else false then 5 else 6\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Ternary(
                            (
                                Boolean(
                                    (
                                        true,
                                        0..4,
                                    ),
                                ),
                                0..4,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                ),
                                10..15,
                            ),
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                false,
                                                21..26,
                                            ),
                                        ),
                                        21..26,
                                    ),
                                    (
                                        Number(
                                            (
                                                5.0,
                                                32..33,
                                            ),
                                        ),
                                        32..33,
                                    ),
                                    (
                                        Number(
                                            (
                                                6.0,
                                                39..40,
                                            ),
                                        ),
                                        39..40,
                                    ),
                                ),
                                21..40,
                            ),
                        ),
                        0..40,
                    ),
                ),
                0..40,
            ),
        ],
    ),
    0..40,
)
