tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"true then\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        Error,
                                        0..9,
                                    ),
                                    (
                                        Error,
                                        0..9,
                                    ),
                                ),
                                0..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ],
    ),
    [
        found end of input at 0..9 expected "expression",
        found end of input at 0..9 expected '"else"',
        found end of input at 0..9 expected "expression",
    ],
)
