tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true then 1 else\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        Number(
                                            (
                                                1.0,
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        Error,
                                        16..17,
                                    ),
                                ),
                                0..17,
                            ),
                        ),
                        0..16,
                    ),
                ),
                0..16,
            ),
        ],
    ),
    [
        Simple {
            span: 16..17,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "true",
                    ),
                ),
                Some(
                    Token(
                        "\"",
                    ),
                ),
                Some(
                    Token(
                        "not",
                    ),
                ),
                Some(
                    Token(
                        "(",
                    ),
                ),
                Some(
                    Token(
                        "false",
                    ),
                ),
                Some(
                    Token(
                        "nameof",
                    ),
                ),
                Some(
                    Token(
                        "[",
                    ),
                ),
                Some(
                    Token(
                        "status",
                    ),
                ),
                Some(
                    Token(
                        "$",
                    ),
                ),
                Some(
                    Token(
                        "-",
                    ),
                ),
                Some(
                    Token(
                        "null",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
    ],
)
