tests/grammar/snapshots/r#mod__grammar__alpha034__ternary.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"   true then 1 else 2   \").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Ternary(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                Number(
                                    (
                                        1.0,
                                        13..14,
                                    ),
                                ),
                                13..14,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        20..21,
                                    ),
                                ),
                                20..21,
                            ),
                        ),
                        3..21,
                    ),
                ),
                3..21,
            ),
        ],
    ),
    3..21,
)
