tests/grammar/snapshots/r#mod__grammar__alpha034__text-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\\\"Hello, {name}!\\\"\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Text(
                        (),
                        [
                            Text(
                                "Hello, ",
                            ),
                            Expression(
                                (),
                                VariableGet(
                                    Variable(
                                        "name",
                                    ),
                                ),
                                (),
                            ),
                            Text(
                                "!",
                            ),
                        ],
                        (),
                    ),
                ),
                None,
            ),
        ),
    ],
)
