tests/grammar/snapshots/r#mod__grammar__alpha034__text-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(r#\"\"\\\"text in quotes\\\" \\\\\"\"#).unwrap()"
---
Statement(
    [
        Expression(
            Text(
                [
                    Escape(
                        "\"",
                    ),
                    Text(
                        "text in quotes",
                    ),
                    Escape(
                        "\"",
                    ),
                    Text(
                        " ",
                    ),
                    Escape(
                        "\\",
                    ),
                ],
            ),
        ),
    ],
)
